--- a/src/styles/pdfviewer.module.css
+++ b/src/styles/pdfviewer.module.css
@@ -14,13 +14,19 @@
     margin-top: 10px;
 }
 
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
 .previousBtn,
 .nextBtn {
     background-color: #393e46;
     color: #eeeeee;
     border: none;
     padding: 10px 20px;
-    margin-top: 10px;
+    margin: 0 5px;
     cursor: pointer;
 }
 
