--- a/src/styles/pdfviewer.module.css
+++ b/src/styles/pdfviewer.module.css
@@ -18,6 +18,7 @@
     display: flex;
     justify-content: center;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .previousBtn,
@@ -42,7 +43,7 @@
     width: 30px;
     height: 30px;
     animation: spin 1s linear infinite;
-    margin-top: 20px;
+    margin: 20px auto; /* Center the spinner horizontally */
 }
 
 @keyframes spin {
