Dockerized everything, began work on ecommerce page in earnest

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,4 +7,5 @@
 @import "navbar.module.css";
 @import "hero.module.css";
 @import "catalog.module.css";
+@import "merch.module.css";
 @import "pdfviewer.module.css";
