--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -9,6 +9,10 @@
     padding: 1rem;
 }
 
+.navbar .icon {
+    display: none;
+}
+
 .navbar-logo {
     font-size: 1.5rem;
     font-weight: bold;
@@ -33,4 +37,27 @@
 .navbarMenuItem.active {
     color: #00adb5;
     font-weight: bold;
+}
+
+@media screen and (max-width: 600px) {
+    .navbar a:not(:first-child) {
+        display: none;
+    }
+    .navbar .icon {
+        display: block;
+    }
+
+    .navbar.responsive {
+        position: relative;
+    }
+    .navbar.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .navbar.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
