Improved styling of issue data on Latest page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,5 +7,6 @@
 @import "navbar.module.css";
 @import "hero.module.css";
 @import "catalog.module.css";
+@import "latest.module.css";
 @import "merch.module.css";
 @import "pdfviewer.module.css";
