--- a/src/styles/pdfviewer.module.css
+++ b/src/styles/pdfviewer.module.css
@@ -109,6 +109,7 @@
     .pdfviewer {
         padding: 5px;
         padding-bottom: 60px; /* Add padding to the bottom to avoid overlap */
+        margin-left: 220px; /* Prevent PDF from running off left of page */
     }
 
     .pageCount {
