--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,8 +1,8 @@
 /* navbar.module.css */
 
 .navbar {
-    background-color: #222831;
-    color: #eeeeee;
+    background-color: var(--background-color);
+    color: var(--text-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,18 +24,18 @@
 }
 
 .navbarMenuItem {
-    color: #eeeeee;
+    color: var(--text-color);
     text-decoration: none;
     padding: 0.5rem;
     transition: color 0.3s ease;
 }
 
 .navbarMenuItem:hover {
-    color: #00adb5;
+    color: var(--primary-color);
 }
 
 .navbarMenuItem.active {
-    color: #00adb5;
+    color: var(--primary-color);
     font-weight: bold;
 }
 
