--- a/src/styles/pdfviewer.module.css
+++ b/src/styles/pdfviewer.module.css
@@ -3,15 +3,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #222831;
-    color: #eeeeee;
+    background-color: var(--background-color);
+    color: var(--text-color);
     padding: 20px;
     padding-bottom: 60px; /* Add padding to the bottom to avoid overlap */
     margin-left: 20px; /* Add margin to the left to avoid overlap */
 }
 
 .pageCount {
-    color: #00adb5;
+    color: var(--primary-color);
     font-size: 16px;
     margin-top: 10px;
 }
@@ -30,8 +30,8 @@
 
 .previousBtn,
 .nextBtn {
-    background-color: #393e46;
-    color: #eeeeee;
+    background-color: var(--tertiary-color);
+    color: var(--text-color);
     border: none;
     padding: 10px 20px;
     margin: 0 5px;
@@ -45,7 +45,7 @@
 }
 
 .spinner {
-    border: 4px solid #00adb5;
+    border: 4px solid var(--primary-color);
     border-top: 4px solid transparent;
     border-radius: 50%;
     width: 30px;
