Refactored out Blurb and Contributors as reusable components to standardize style

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,8 @@
 
 @import "page.module.css";
 
+@import "blurb.module.css";
+@import "contributors.module.css";
 @import "paginatedlist.module.css";
 @import "navbar.module.css";
 @import "hero.module.css";
