--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -15,6 +15,7 @@ body {
 .header h1 {
     font-size: 24px;
     font-weight: bold;
+    font-family: var(--header-font);
     margin: 0;
 }
 
@@ -23,6 +24,7 @@ body {
     background-color: var(--background-color);
     padding: 20px;
     color: var(--text-color);
+    font-family: var(--standard-font);
 }
 
 /* Footer Styles */
