--- a/src/styles/paginatedlist.module.css
+++ b/src/styles/paginatedlist.module.css
@@ -50,12 +50,12 @@
     margin: 5px 0;
 }
 
-.itemSelector .itemID a {
-    text-decoration: none;
-    color: var(--primary-color);
-    transition: color 0.3s;
+.itemSelector .itemID.active {
+    font-weight: bold;
+    color: var(--active-item-color);
 }
 
-.itemSelector .itemID a:hover {
-    color: var(--secondary-color);
+.itemSelector .itemID:hover {
+    background-color: var(--item-hover-bg-color);
+    cursor: pointer;
 }
