Added favicon to site, documentation for react components, fixed styling for footer

--- a/src/styles/catalog.module.css
+++ b/src/styles/catalog.module.css
@@ -2,10 +2,12 @@
     font-size: 1.2em;
     color: var(--tertiary-color);
     text-align: center;
+    height: 100vh;
 }
 
 .catalog-pdfviewer {
     margin: 20px 0;
+    height: 100vh;
 }
 
 .contentSection {
