--- a/src/styles/contributors.module.css
+++ b/src/styles/contributors.module.css
@@ -1,3 +1,10 @@
+.contributors-loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .contributors {
     text-align: center;
     list-style: none;
