--- a/src/styles/catalog.module.css
+++ b/src/styles/catalog.module.css
@@ -16,3 +16,9 @@
     align-items: center;
     flex-wrap: wrap;
 }
+
+@media (max-width: 600px) {
+    .contentSection {
+        flex-direction: column;
+    }
+}
