--- a/src/styles/latest.module.css
+++ b/src/styles/latest.module.css
@@ -22,3 +22,9 @@
     align-items: center;
     flex-wrap: wrap;
 }
+
+@media (max-width: 600px) {
+    .contentSection {
+        flex-direction: column;
+    }
+}
