Made footer less obtrusive in color, added missing page title to subscribe page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,6 +38,7 @@
 @import "navbar.module.css";
 @import "hero.module.css";
 @import "catalog.module.css";
+@import "footer.module.css";
 @import "latest.module.css";
 @import "merch.module.css";
 @import "news.module.css";
