Removed Layout component (more trouble than help), added signature component, made UI more responsive

--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,7 +1,7 @@
 .footer { 
     position: relative; 
     bottom: 0;
-    width: 100%; 
+    width: fit-content; 
     background-color: var(--tertiary-color); 
     padding: 10px; 
     text-align: right; 
