--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -25,6 +25,10 @@ body {
     padding: 20px;
     color: var(--text-color);
     font-family: var(--standard-font);
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Footer Styles */
