--- a/src/styles/pdfviewer.module.css
+++ b/src/styles/pdfviewer.module.css
@@ -3,11 +3,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: var(--background-color);
+    background-color: rgba(0,0,0,0.5);
+    margin-right: 10px;
     color: var(--text-color);
     padding: 20px;
     padding-bottom: 60px; /* Add padding to the bottom to avoid overlap */
     margin-left: 20px; /* Add margin to the left to avoid overlap */
+    border-radius: 10px;
 }
 
 .pageCount {
@@ -71,6 +73,13 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+}
+
+@media (min-width: 768px) {
+    .pdfviewer {
+        min-width: 800px;
+        min-height: 800px;
+    }
 }
 
 /* Media Queries for Responsiveness */
