Fixed look of centered component on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,3 +43,5 @@
 @import "news.module.css";
 @import "pdfviewer.module.css";
 @import "productgrid.module.css";
+@import "paperbacked.module.css";
+@import "centered.module.css";
