Got rid of unnecessary images, added tape decoration for news items, paper bg for front page

--- a/src/styles/news.module.css
+++ b/src/styles/news.module.css
@@ -1,44 +1,91 @@
 .news-container {
     display: flex;
-    flex-direction: column; /* Change to column to display elements vertically */
+    flex-direction: column;
     align-items: center;
-    padding: 20px;
-    width: 100%;
     background-color: var(--background-color);
     font-family: Arial, sans-serif;
+    margin-bottom: 20px;
+    position: relative;
 }
 
-.news-title {
-    font-size: 2.5em;
-    color: var(--text-color);
-    margin-bottom: 20px;
+.news-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.news-header-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: fit-content;
+}
+
+.news-header-bg-container {
+    top: 0;
+    left: 0;
+    height: 100%;
+    z-index: 0;
+}
+
+.news-header-bg-image {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    max-height: 110vh;
+    z-index: -1;
+}
+
+.news-header-image {
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .news-list {
     display: flex;
-    flex-direction: row; /* Change to row to display elements horizontally */
+    flex-direction: row;
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
+    align-items: center;
+    margin-top: 20px;
 }
 
 .news-item {
     background-color: var(--card-bg-color);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
     transition: transform 0.3s;
-    width: 300px;
+    min-width: 400px;
+    height: fit-content;
+    position: relative;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: visible;
 }
 
-.news-item:hover {
-    transform: translateY(-10px);
+.news-item-underlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--tertiary-color);
+    border-radius: 10px;
 }
 
 .news-image {
     width: fit-content;
     flex: 0 0 50%;
     object-fit: cover;
+    overflow: hidden;
+    border-radius: 10px;
 }
 
 .news-content {
@@ -46,13 +93,76 @@
 }
 
 .news-title {
-    font-size: 1.5em;
+    font-size: 30px;
+    font-family: var(--handwritten-font);
     color: var(--text-color);
     margin: 0 0 10px 0;
 }
 
 .news-description {
-    font-size: 1em;
+    font-size: 22px;
+    font-family: var(--handwritten-font);
     color: var(--text-color);
     line-height: 1.5;
+}
+
+.tape-decoration-container {
+    top: -50px;
+    left: -150px;
+    max-width: 10rem;
+    position: relative;
+    overflow: visible;
+}
+
+.tape-decoration {
+    position: absolute;
+    max-width: 10rem;
+    z-index: 5;
+    filter: contrast(1.2);
+}
+
+@media (max-width: 1200px) {
+    .news-item {
+        max-width: 300px;
+    }
+
+    .news-title {
+        font-size: 2em;
+    }
+
+    .news-description {
+        font-size: 1.5em;
+    }
+}
+
+@media (max-width: 768px) {
+    .news-header-container {
+        flex-direction: column;
+    }
+
+    .news-list {
+        flex-direction: column;
+    }
+
+    .news-item {
+        max-width: 50%;
+    }
+
+    .news-title {
+        font-size: 1.5em;
+    }
+
+    .news-description {
+        font-size: 1.2em;
+    }
+}
+
+@media (max-width: 480px) {
+    .news-title {
+        font-size: 1.2em;
+    }
+
+    .news-description {
+        font-size: 1em;
+    }
 }
