--- a/src/styles/pdfviewer.module.css
+++ b/src/styles/pdfviewer.module.css
@@ -1,3 +1,10 @@
+.pdfviewer-region {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
 .pdfviewer {
     display: flex;
     flex-direction: column;
