--- a/src/styles/catalog.module.css
+++ b/src/styles/catalog.module.css
@@ -17,8 +17,22 @@
     flex-wrap: wrap;
 }
 
+.catalog-bg-image-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    z-index: -2;
+}
+
 @media (max-width: 600px) {
     .contentSection {
         flex-direction: column;
+    }
+
+    .catalog-bg-image-container {
+        display: none;
     }
 }
