--- a/src/styles/latest.module.css
+++ b/src/styles/latest.module.css
@@ -23,8 +23,21 @@
     flex-wrap: wrap;
 }
 
+.latest-bg-image-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    z-index: -2;
+}
+
 @media (max-width: 600px) {
     .contentSection {
         flex-direction: column;
+    }
+    .latest-bg-image-container {
+        display: none;
     }
 }
