Added more sensible max-width to news items

--- a/src/styles/news.module.css
+++ b/src/styles/news.module.css
@@ -162,6 +162,10 @@
         font-size: 1.2em;
     }
 
+    .news-item {
+        max-width: 150px;
+    }
+
     .news-description {
         font-size: 1em;
     }
