--- a/src/styles/hero.module.css
+++ b/src/styles/hero.module.css
@@ -82,3 +82,14 @@
         font-size: 22px;
     }
 }
+
+@media (max-width: 480px) {
+
+    .hero-title {
+        font-size: 24px;
+    }
+
+    .hero-description {
+        font-size: 18px;
+    }
+}
