--- a/src/styles/news.module.css
+++ b/src/styles/news.module.css
@@ -62,7 +62,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
-    min-width: 400px;
+    width: 400px;
     height: fit-content;
     position: relative;
     margin-top: 2rem;
@@ -122,9 +122,6 @@
 }
 
 @media (max-width: 1200px) {
-    .news-item {
-        max-width: 300px;
-    }
 
     .news-title {
         font-size: 2em;
@@ -145,7 +142,13 @@
     }
 
     .news-item {
-        max-width: 50%;
+        width: 250px;
+    }
+
+    .news-image {
+        width: 100%;
+        max-width: 1000px;
+        flex: 0 0 100%;
     }
 
     .news-title {
@@ -163,7 +166,7 @@
     }
 
     .news-item {
-        max-width: 150px;
+        width: 150px;
     }
 
     .news-description {
