--- a/src/styles/pdfviewer.module.css
+++ b/src/styles/pdfviewer.module.css
@@ -93,6 +93,7 @@
 @media (max-width: 768px) {
     .pdfviewer {
         padding: 10px;
+        min-width: 100%;
         padding-bottom: 60px; /* Add padding to the bottom to avoid overlap */
         margin-left: 20px;
     }
