--- a/src/styles/hero.module.css
+++ b/src/styles/hero.module.css
@@ -2,24 +2,24 @@
     position: relative;
     background-color: var(--background-color);
     color: var(--text-color);
-    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     height: 60vh;
     overflow: hidden;
 }
 
 .hero-content {
-    margin-top: 20px;
     text-align: center;
     position: relative; 
     z-index: 1; 
     background-color: rgb(0,0,0,0.6);
-    padding: 10px;
-    border-radius: 10px;
-    height: fit-content;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10%;
+    height: 100%;
+    width: 100%;
 }
 
 .hero-title {
