--- a/src/styles/productgrid.module.css
+++ b/src/styles/productgrid.module.css
@@ -3,7 +3,6 @@
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 20px;
     padding: 20px;
-    background-color: var(--background-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,10 +16,23 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s;
     min-width: 300px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .product-grid > div:hover {
     transform: translateY(-5px);
+}
+
+.product-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+    max-height: 80%;
 }
 
 .button-container {
