--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,9 +1,8 @@
 .footer { 
-    position: relative; 
+    position: fixed; 
     bottom: 0;
     width: fit-content; 
     background-color: var(--tertiary-color); 
-    padding: 10px; 
     text-align: right; 
     font-size: 14px; 
     color: var(--text-color)
