--- a/src/components/bg/ContextBg.css
+++ b/src/components/bg/ContextBg.css
@@ -7,3 +7,9 @@
     min-height: 100vh;
     z-index: -2;
 }
+
+@media (max-width: 768px) {
+    .context-bg-image-container {
+        display: none;
+    }
+}
