--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -62,6 +62,10 @@
         align-self: flex-start;
     }
 
+    .navbar.responsive .icon {
+        display: none;
+    }
+
     .navbar.responsive .navbarMenu {
         display: flex;
     }
