--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -17,9 +17,16 @@
     background-color: rgb(0,0,0,0.6);
     justify-content: center;
     align-items: center;
-    padding-top: 10%;
     height: 100%;
     width: 100%;
+}
+
+.hero-title-img-container {
+    justify-content: center;
+    align-items: center;
+    margin-top: 3%;
+    width: 50%;
+    height: auto;
 }
 
 .hero-title {
@@ -70,6 +77,11 @@
     .hero-description {
         font-size: 24px;
     }
+
+    .hero-title-img-container {
+        width: 60%;
+        margin-top: 5%;
+    }
 }
 
 @media (max-width: 576px) {
@@ -80,6 +92,11 @@
 
     .hero-description {
         font-size: 22px;
+    }
+
+    .hero-title-img-container {
+        width: 70%;
+        margin-top: 10%;
     }
 }
 
