Added admin page with AWS Cognito auth integration

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,7 @@
     --item-hover-bg-color: #393E46;
 }
 
+@import "admin.module.css";
 @import "catalog.module.css";
 @import "featured.module.css";
 @import "latest.module.css";
